# vk_extract_audio_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .style.yapf  .yapfignore  Dockerfile  Messages.py  README.md  __init__.py  config.py  docker-compose.yml  format.ps1  main.py  pyproject.toml  pytest.coveragerc  pytest.ini  requirements.txt  user_messages.py
.gitea/workflows/: merge-to-master.yml  push-to-master.yml
bot_enums/: VkVideoPlatform.py
bot_types/: AudioConvertSettings.py  AudioInfo.py  MongoVariable.py  VideoDownloadSettings.py  VideoInfo.py  VideoPlatform.py  VkVideoPlatform.py  ZodbVariable.py  audio_convert_settings.py  audio_info.py  video_download_settings.py  video_info.py  video_platform.py  vk_android_audio.py  vk_video_platform.py  zodb_variable.py
services/: ConverterService.py  VideoService.py  VkAudioService.py  VkMessageService.py  converter_service.py  downloader.py  extra.py  extractor.py  video_service.py  vk_audio_service.py  vk_message_service.py
tests/: common.py  conftest.py  fixture_types.py  test_audio_api.py  test_downloader.py  test_extractor.py  test_file.py  test_settings.py
vk_api/: vk_api.py
vk_extract_audio_bot/: __main__.py  errors.py  settings.py  user_messages.py  vk_apis.py
vk_extract_audio_bot/data_types/: __init__.py  common.py
vk_extract_audio_bot/db/: __init__.py  db.py  models.py  service.py
vk_extract_audio_bot/routers/: __init__.py  _utils.py  direct_router.py
vk_extract_audio_bot/utils/: __init__.py  converter.py  downloader.py  extractor.py  message_queue.py  video.py
vk_extract_audio_bot/utils/vk/: __init__.py  _utils.py  android.py  audios.py  handlers.py  responses.py  utils.py
vk_extract_audio_from_video_bot/: __init__.py  main.py  user_messages.py
vk_extract_audio_from_video_bot/bot_types/: audio_convert_settings.py  audio_info.py  video_download_settings.py  video_info.py  video_platform.py  vk_android_audio.py  vk_video_platform.py  zodb_variable.py
vk_extract_audio_from_video_bot/services/: converter_service.py  downloader.py  extractor.py  video_service.py  vk_audio_service.py  vk_message_service.py
