[tool.poetry]
name = "audio_extractor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.10.0"
brotli = "^1.0.9"
btrees = "^4.11.3"
certifi = "^2021.10.8"
cffi = "^1.15.1"
charset-normalizer = "^2.0.10"
colorama = "^0.4.4"
decorator = "^4.4.2"
dnspython = "^2.2.0"
# ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
future = "^0.18.2"
idna = "^3.3"
imageio = "^2.13.5"
imageio-ffmpeg = "^0.4.5"
lxml = "^4.9.0"
moviepy = "^1.0.3"
mutagen = "^1.45.1"
numpy = "^1.22.4"
persistent = "^4.9.3"
pillow = "^9.0.0"
proglog = "^0.1.9"
pycparser = "^2.21"
pycryptodomex = "^3.14.0"
pyotp = "^2.6.0"
python-dotenv = "^0.21.0"
requests = "^2.27.1"
six = "^1.16.0"
soupsieve = "^2.3.1"
tqdm = "^4.62.3"
transaction = "^3.0.1"
urllib3 = "^1.26.8"
vk-api = "^11.9.9"
vkaudiotoken = "^0.5.1"
websocket-client = "^1.2.3"
websockets = "^10.1"
youtube-dl = "^2021.12.17"
zc-lockfile = "^2.0"
zconfig = "^3.6.1"
zdaemon = "^4.4"
zeo = "^5.3.0"
zodb = "^5.8.0"
zodbpickle = "^2.6"
zope-interface = "^5.5.2"
yt-dlp = "^2023.11.16"
pydantic = "^2.5.2"
pathvalidate = "^3.2.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pylint = "3.0.3"
yapf = "0.40.2"
ruff = "0.3.0"
black = "^24.2.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
